--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -17,6 +17,12 @@
     "jsonwebtoken": "^9.0.2",
     "jwtoken": "^0.0.0",
     "mongoose": "^8.6.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
+  },
+  "keywords": [],
+  "description": "",
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
