--- a/frontend/p/package.json
+++ b/frontend/p/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@paypal/react-paypal-js": "^8.6.0",
     "@heroicons/react": "^1.0.6",
+    "@paypal/react-paypal-js": "^8.6.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.5.3",
     "lucide-react": "^0.438.0",
+    "rc-slider": "^11.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "react-spring": "^9.7.4",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
