--- a/social-media/Client/package.json
+++ b/social-media/Client/package.json
@@ -19,8 +19,10 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.0",
+    "sweetalert2": "^11.13.3",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
